# Ninja-Virtual-Machine

./: .gitignore  CMakeLists.txt  README.md
aufgaben/: aufgaben.adoc
aufgaben/a-pre/: aufgabe.adoc
aufgaben/a0/: aufgabe.adoc  njvm.c
aufgaben/a1/: aufgabe.adoc
aufgaben/a1/loesung-najmi/: execute.c  execute.h  memory.h  njvm  njvm.c  njvm.h  operations.c  operations.h
aufgaben/a1/solution/: exec.c  exec.h  njvm.c  njvm.h  printer.c  printer.h  programme.h
aufgaben/a2/: aufgabe.adoc
aufgaben/a2/loesung/: execute.c  njvm  njvm.c  njvm.h  operations.c  operations.h  prog.h
aufgaben/a3/: aufgabe.adoc
aufgaben/a3/loesung/: debug.c  execute.c  njvm  njvm.c  njvm.h  operations.c  operations.h
aufgaben/a4/: aufgabe.adoc
aufgaben/a4/loesung/: debug.c  execute.c  njvm  njvm.c  operations.c  operations.h  prog.h
aufgaben/a5/: aufgabe.adoc
aufgaben/a6/: aufgabe.adoc
aufgaben/a7/: aufgabe.adoc  matinv.asm  twodim.asm
aufgaben/a8/: anmerkungen_abgabe_hu2.adoc  aufgabe.adoc
hausuebung/.submitscript/data/: config.json
hausuebung/.submitscript/src/: main.sh
hausuebung/njvm/: CMakeLists.txt  assemble.sh  mknjvm  njvm  p1.asm  p2.asm  p3.asm  run.sh
hausuebung/njvm/njvm.dSYM/Contents/Resources/DWARF/: njvm
hausuebung/njvm/src/: debug.c  debug.h  exec.c  exec.h  execute.c  execute.h  garbage.c  garbage.h  instruction.c  instruction.h  memory.c  memory.h  njvm  njvm.c  njvm.h  operations.c  operations.h  printer.c  printer.h  programme.h  support.c
hausuebung/njvm/src/bigint/src/: Makefile
hausuebung/njvm/src/bigint/tst/: Makefile  testbip
(+3 files in other folders)
